--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ netCDF4==1.5.7
 xarray==0.19.0
 rasterio==1.2.6
 rioxarray==0.6.1
-Pillow==8.3.2
-opencv-python==4.5.3.56
+Pillow>=8.3.2
+opencv-python-headless>=4.5.3.56
 ImageHash==4.2.1
 imageio==2.9.0
 rich==10.7.0
